# cppgame

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.lua  main2.lua
.github/workflows/: c-cpp.yml
cmake/: Finddoctest.cmake  Findentt.cmake  Findphmap.cmake  Findraylib.cmake  Findsol2.cmake
engine/: clasp.lua  init.lua  json.lua  license.txt  print_r.lua  util.lua
engine/examples/: solarsystem.lua  viewtest.lua
engine/plugins/collision/: init.lua
engine/plugins/color/: init.lua  material.json
engine/plugins/editor/: README.md  init.lua  stage.lua
engine/plugins/effects/: boxblur.lua  chromasep.lua  filmgrain.lua  init.lua
engine/plugins/image/: index.d.ts  init.lua
engine/plugins/input/: init.lua
engine/plugins/map/: init.lua
engine/plugins/structures/: grid.lua
engine/plugins/ui/: init.lua
old/: ecs_graph copy.cpp  ecs_graph.cpp  ecs_graph.h
src/: ecs_graph.cpp  ecs_graph.h  engine.cpp  engine.h  error.cpp  error.h  fs.cpp  fs.h  graphics.cpp  graphics.h  main.cpp  raylib.hpp  sol.h  test.cpp  test.h  uuid.h  window.cpp  window.h
test/: graphics.cpp  test.cpp  test.h
